refactor: refactoring uri endpoints from openings to opening, and implementation docs for list openings correct
